--- a/src/app/view-controller/navigation-buttons/navigation-buttons.component.scss
+++ b/src/app/view-controller/navigation-buttons/navigation-buttons.component.scss
@@ -12,12 +12,12 @@ div {
     color: rgb(155, 155, 155);
     font-size: 35px;
     padding: 5px;
-    margin: 0 5px 0 5px;
+    // margin: 10px;
     border-radius: 50%;
-    background-color: rgba($color: black, $alpha: 0.8);
     transition: all 200ms ease-in-out;
     &:hover {
       filter: brightness(2);
+      background-color: rgba($color: black, $alpha: 0.6);
     }
   }
 }
