--- a/src/app/view-controller/search/search-sheet/search-sheet.component.scss
+++ b/src/app/view-controller/search/search-sheet/search-sheet.component.scss
@@ -1,7 +1,6 @@
 div {
-  width: 60%;
   position: relative;
-  margin-left: 15%;
+  // margin-left: 15%;
   app-view-controller-result-panel {
     display: flex;
     flex-flow: column;
