--- a/src/app/view-controller/view-controller.components/view-controller.component.html
+++ b/src/app/view-controller/view-controller.components/view-controller.component.html
@@ -1,5 +1,5 @@
-<div (mousedown)="updateOverlayStatus(false)">
-  <div @blurTrigger class="view background" *ngIf="overlay"></div>
+<div class="container" (mousedown)="updateOverlayStatus(false)">
+  <div @blurTrigger class="container-background" *ngIf="overlay"></div>
   <app-view-controller-navigation-buttons
     (mousedown)="$event.stopPropagation()"
   ></app-view-controller-navigation-buttons>
