--- a/src/app/navbar/navbar.component/navbar.component.html
+++ b/src/app/navbar/navbar.component/navbar.component.html
@@ -1,7 +1,5 @@
-<div class="navbar-container">
-  <div class="logo">
-    <app-navbar-logo></app-navbar-logo>
-  </div>
+<div class="container">
+  <app-navbar-logo></app-navbar-logo>
   <div class="items">
     <app-navbar-item
       *ngFor="let item of this.navbarItems"
