--- a/src/app/app.component/app.component.html
+++ b/src/app/app.component/app.component.html
@@ -1,11 +1,7 @@
-<div>
-  <div class="navbar">
-    <app-navbar></app-navbar>
-  </div>
+<div class="container">
+  <app-navbar></app-navbar>
   <div (scroll)="updateScroll(outlet)" class="content">
-    <div class="app-view-controller">
-      <app-view-controller></app-view-controller>
-    </div>
+    <app-view-controller></app-view-controller>
     <div #outlet class="router-outlet">
       <router-outlet style="display: none;"></router-outlet>
     </div>
