--- a/src/app/app.component/app.component.scss
+++ b/src/app/app.component/app.component.scss
@@ -1,31 +1,18 @@
-div {
+.container {
   display: grid;
   grid-template-areas: 'navbar content';
-  height: 100%;
   grid-template-columns: 230px 1fr;
-  grid-template-rows: 1fr;
-  &.navbar {
+  app-navbar {
     grid-area: navbar;
   }
-  &.content {
+  .content {
     grid-area: content;
-    display: flex;
-    flex-flow: column;
     overflow: scroll;
     height: 100vh;
 
+    scrollbar-width: none;
     &::-webkit-scrollbar {
       display: none;
-    }
-    scrollbar-width: none;
-    .router-outlet {
-      grid-area: router-outlet;
-      display: initial;
-    }
-    .app-view-controller {
-      display: initial;
-      width: 100%;
-      height: auto;
     }
   }
 }
