--- a/src/app/navbar/logo/components/logo.component.scss
+++ b/src/app/navbar/logo/components/logo.component.scss
@@ -1,18 +1,16 @@
 div {
   user-select: none;
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row;
   justify-content: center;
   align-items: center;
+  color: white;
   i {
-    color: white;
     margin-left: -15px;
     font-size: 40px;
   }
   h1 {
-    color: white;
     font-family: 'roboto', sans-serif;
-    font-weight: 700;
     font-size: 27px;
   }
 }
