--- a/src/app/navbar/navbar-item/components/navbar-item.component.html
+++ b/src/app/navbar/navbar-item/components/navbar-item.component.html
@@ -1,12 +1,4 @@
-<a [routerLink]="link" [class.subitem]="isSubitem" routerLinkActive="active">
+<a [routerLink]="link" routerLinkActive="active">
   <i class="material-icons">{{ icon }}</i>
   {{ title }}
 </a>
-<div *ngIf="subitems" class="subitems">
-  <app-navbar-item
-    *ngFor="let item of subitems"
-    [isSubitem]="true"
-    [title]="item.title"
-    [link]="item.link"
-  ></app-navbar-item>
-</div>
