--- a/src/app/navbar/navbar-item/components/navbar-item.component.scss
+++ b/src/app/navbar/navbar-item/components/navbar-item.component.scss
@@ -1,5 +1,4 @@
 a {
-  width: 90%;
   color: white;
   font-family: 'roboto', sans-serif;
   text-decoration: none;
@@ -7,7 +6,6 @@ a {
   font-weight: bold;
   display: flex;
   flex-flow: row;
-  justify-content: left;
   align-items: center;
   padding: 10px 8px 10px 8px;
   margin: 5px 0 5px 0;
@@ -22,27 +20,8 @@ a {
   &:focus {
     background-color: rgba(40, 40, 40, 0.4);
   }
-  &:hover {
-    background-color: rgb(40, 40, 40);
-  }
+  &:hover,
   &.active {
     background-color: rgb(40, 40, 40);
   }
-  &.subitem {
-    width: auto;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 500;
-    color: grey;
-    margin: 0 0 0 50px;
-    &:hover {
-      background-color: transparent;
-    }
-    i {
-      display: none;
-    }
-  }
-}
-.subitems {
-  margin-top: 10px;
 }
