--- a/src/app/navbar/navbar.component/navbar.component.scss
+++ b/src/app/navbar/navbar.component/navbar.component.scss
@@ -1,24 +1,19 @@
-.navbar-container {
+.container {
   height: 100vh;
-  width: 100%;
   background-color: black;
   display: flex;
   flex-flow: column;
-  align-items: center;
   overflow-y: scroll;
   scrollbar-width: none;
   &::-webkit-scrollbar {
     display: none;
   }
-  .logo {
+  app-navbar-logo {
     padding: 10px 0 10px 0;
   }
   .items {
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: left;
-    width: 90%;
-    margin: 30px 0 0 0;
+    margin: auto;
+    width: 85%;
+    margin-top: 30px;
   }
 }
