--- a/src/app/view-controller/view-controller.components/view-controller.component.scss
+++ b/src/app/view-controller/view-controller.components/view-controller.component.scss
@@ -1,4 +1,4 @@
-div {
+.container {
   height: 80px;
   width: calc(100% - 230px);
   position: fixed;
@@ -6,41 +6,28 @@ div {
   display: flex;
   flex-flow: row;
   align-items: center;
-  justify-content: flex-start;
   background-color: rgba($color: rgb(8, 8, 8), $alpha: 0.7);
   app-view-controller-navigation-buttons {
     position: absolute;
-    z-index: 10;
-    // display: none;
+    z-index: inherit;
   }
   .module-controller {
-    z-index: 10;
+    z-index: inherit;
     position: relative;
     margin: auto;
     width: 50%;
   }
-
   .view.background {
     position: absolute;
     height: 110%;
     width: 100%;
-    z-index: 0;
     background-color: rgba($color: rgb(10, 10, 10), $alpha: 0.7);
   }
 }
-.overlay {
+view-controller-overlay {
   position: absolute;
   height: calc(100% - 80px);
+  width: calc(100% - 230px);
   z-index: 9;
   margin-top: 80px;
-  background-color: rgba($color: rgb(8, 8, 8), $alpha: 0.7);
-  .overlay.background {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    display: block;
-    margin: 0;
-    background-color: rgba($color: rgb(12, 12, 12), $alpha: 0.7);
-    filter: blur(5px);
-  }
 }
