continuing imporoving component css and html

--- a/src/app/music/music.component/music.component.html
+++ b/src/app/music/music.component/music.component.html
@@ -1,4 +1,4 @@
-<div class="app-music">
+<div class="container">
   <app-horizontal-list
     *ngFor="let category of categories"
     [header]="category"
