--- a/src/app/explore/genere-music/genere-music.component.html
+++ b/src/app/explore/genere-music/genere-music.component.html
@@ -1,4 +1,5 @@
 <div
+  class="container"
   [ngStyle]="{
     background:
       'linear-gradient(180deg, rgba(' +
@@ -14,7 +15,8 @@
     {{ title }}
   </h1>
   <app-horizontal-list [header]="'New releases'"></app-horizontal-list>
-  <div style="background: none; height: 20px; padding: 0;"></div>
+  <br />
+  <br />
   <app-horizontal-list
     [count]="30"
     [header]="'Popular playlist'"
