--- a/src/app/explore/genere-music/genere-music.component.scss
+++ b/src/app/explore/genere-music/genere-music.component.scss
@@ -1,7 +1,6 @@
-div {
+.container {
   padding: 80px 60px 0 60px;
   h1 {
-    // width: 100%;
     font-family: 'roboto', sans-serif;
     font-size: 45px;
     text-align: center;
@@ -9,7 +8,6 @@ div {
     margin: 0 0 6% 0;
     position: relative;
     z-index: 0;
-    // margin: 0;
   }
 
   app-horizontal-list {
