--- a/src/app/explore/generes/generes.component.scss
+++ b/src/app/explore/generes/generes.component.scss
@@ -1,7 +1,7 @@
 ul {
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
   column-gap: 20px;
   row-gap: 16px;
   margin: 0;
