--- a/src/app/shared/modules/horizontal-list/horizontal-list.component/horizontal-list.component.scss
+++ b/src/app/shared/modules/horizontal-list/horizontal-list.component/horizontal-list.component.scss
@@ -1,4 +1,4 @@
-.horizontal-list {
+.container {
   display: flex;
   flex-flow: column;
   font-family: 'roboto', sans-serif;
@@ -11,10 +11,11 @@
   ul {
     list-style: none;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
     column-gap: 20px;
+    justify-content: center;
     row-gap: 35px;
-    margin: 0;
     padding: 0;
+    margin: 0;
   }
 }
