--- a/src/app/view-controller/search/result-panel/result-panel.component.scss
+++ b/src/app/view-controller/search/result-panel/result-panel.component.scss
@@ -1,4 +1,4 @@
-div {
+.container {
   background-color: rgba($color: rgb(15, 15, 15), $alpha: 0.5);
   box-shadow: 0 5px 12px 6px rgba($color: black, $alpha: 0.9);
   max-height: 60vh;
@@ -14,26 +14,26 @@ div {
     background-color: rgba($color: rgb(20, 20, 20), $alpha: 0.5);
     filter: blur(3px);
     width: 100%;
-    height: calc(100%);
-    margin: 0;
-    padding: 0;
-    box-shadow: none;
+    height: 100%;
   }
   .results {
     position: relative;
     margin: 0 10px;
-    border-radius: 0;
-    background-color: transparent;
-    max-height: calc(60vh - 20px);
+    max-height: 60vh;
+    box-sizing: border-box;
     overflow-y: scroll;
-    box-shadow: none;
-    width: 100%;
     scrollbar-width: none;
     opacity: 1;
     &::-webkit-scrollbar {
       display: none;
     }
-    &.icon {
+    p {
+      font-weight: 500;
+      font-size: 14px;
+      color: grey;
+      margin: 20px 0 20px 0;
+    }
+    &.no-results {
       display: flex;
       flex-flow: column;
       align-items: center;
@@ -59,13 +59,6 @@ div {
         font-size: 13.5px;
         text-align: center;
         max-width: 50%;
-      }
-    }
-    &.recents {
-      p {
-        font-weight: 500;
-        font-size: 14px;
-        color: grey;
       }
     }
   }
