--- a/src/app/view-controller/search/search-bar/search-bar.component.scss
+++ b/src/app/view-controller/search/search-bar/search-bar.component.scss
@@ -7,17 +7,13 @@
   }
 }
 
-div {
-  width: 100%;
+.container {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-
   input {
-    font-family: 'roboto', sans-serif;
-    font-size: 15px;
-    font-weight: 700;
+    font: normal 700 15px 'roboto', sans-serif;
     color: black;
     width: 100%;
     background-color: white;
@@ -28,14 +24,13 @@ div {
     padding: 0 30px 0 10px;
     transition: all 200ms ease-in-out;
     box-shadow: 0 5px 10px black;
+    &.activated {
+      box-shadow: 0 5px 12px 6px black;
+    }
     &::placeholder {
-      font-weight: 700;
       text-align: center;
       color: rgb(70, 70, 70);
       opacity: 1;
-    }
-    &.activated {
-      box-shadow: 0 5px 12px 6px black;
     }
   }
   .cancel-search {
