--- a/src/app/view-controller/view-controller.components/view-controller.component.scss
+++ b/src/app/view-controller/view-controller.components/view-controller.component.scss
@@ -17,7 +17,7 @@
     margin: auto;
     width: 50%;
   }
-  .view.background {
+  .background {
     position: absolute;
     height: 110%;
     width: 100%;
