--- a/src/app/playlist-detail/track-list/track-list.component.scss
+++ b/src/app/playlist-detail/track-list/track-list.component.scss
@@ -1,39 +1,42 @@
 ol {
   counter-reset: item;
-  color: grey;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 500;
   display: flex;
   flex-flow: column;
   align-items: flex-start;
-  justify-content: center;
   font-size: 18px;
   padding: 0;
   margin-top: 90px;
   li {
     display: flex;
     flex-flow: row;
-    align-items: flex-start;
-    justify-content: stretch;
-    padding: 0 30px 5px 30px;
-    width: calc(100% - 60px);
+    padding: 0 10px 5px 70px;
+    width: 100%;
+    box-sizing: border-box;
     cursor: pointer;
     margin: 5px 0;
+    position: relative;
     transition: all 200ms ease-in-out;
-    // border-radius: 5px;
     &:hover {
       background-color: rgba($color: black, $alpha: 0.3);
-      // box-shadow: 0 2px 10px rgba($color: rgb(0, 0, 0), $alpha: 0.3);
+      i {
+        color: #95e1d3;
+      }
     }
-    &:before {
-      content: counter(item) '. ';
-      counter-increment: item;
+    i {
+      position: absolute;
+      font-size: 35px;
+      left: 10px;
+      top: 25%;
       color: grey;
-      align-self: center;
-      padding-right: 30px;
-      margin-top: -15px;
+      transition: all 200ms ease-in-out;
     }
+    // &:before {
+    //   content: counter(item) '. ';
+    //   counter-increment: item;
+    //   align-self: center;
+    //   padding-right: 30px;
+    //   margin-top: -15px;
+    // }
     app-music-tile {
       flex-grow: 1;
     }
