--- a/src/app/shared/modules/actions/actions.component/actions.component.scss
+++ b/src/app/shared/modules/actions/actions.component/actions.component.scss
@@ -1,8 +1,26 @@
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  h1 {
-    padding-bottom: 20px;
+.container {
+  width: 100%;
+  height: 100vh;
+  background-color: transparent;
+  overflow: scroll;
+  cursor: initial;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  ul {
+    list-style: none;
+    margin: 0;
+    margin: 6% 0 0 0;
+    padding: 0;
+    color: white;
+    font-family: 'roboto', sans-serif;
+    .app-image {
+      width: 260px;
+      // height: 300px;
+    }
+    h1 {
+      padding-bottom: 20px;
+    }
   }
 }
