--- a/src/app/shared/modules/actions/actions.component/actions.component.scss
+++ b/src/app/shared/modules/actions/actions.component/actions.component.scss
@@ -1,6 +1,7 @@
 .container {
   width: 100%;
   height: 100vh;
+  display: flex;
   background-color: transparent;
   overflow: scroll;
   cursor: initial;
@@ -10,14 +11,12 @@
   }
   ul {
     list-style: none;
-    margin: 0;
-    margin: 6% 0 0 0;
-    padding: 0;
+    margin: auto 0 0 0;
+    padding: 6% 0 0 0;
     color: white;
     font-family: 'roboto', sans-serif;
     .app-image {
       width: 260px;
-      // height: 300px;
     }
     h1 {
       padding-bottom: 20px;
