changing how services work
test data will work as a centeral database who every service will call using a url which.
also instead horizontal list calling api for components, every component calls its api
and passes the list of items to horizontal list

--- a/src/app/music/music.component/music.component.html
+++ b/src/app/music/music.component/music.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <app-horizontal-list
     *ngFor="let category of categories"
-    [header]="category"
+    [header]="category.title"
+    [items]="category.items"
+    [cardType]="cardType"
   ></app-horizontal-list>
 </div>
