--- a/src/app/explore/genere-music/genere-music.component.scss
+++ b/src/app/explore/genere-music/genere-music.component.scss
@@ -10,7 +10,7 @@
     z-index: 0;
   }
 
-  app-horizontal-list {
+  div app-horizontal-list {
     margin-top: 0;
     position: relative;
     z-index: 1;
