added slide animation to media-controller. when overlay is activated the media-controller slides down and back up again when it deactivated

--- a/src/app/app.component/app.component.html
+++ b/src/app/app.component/app.component.html
@@ -6,4 +6,5 @@
       <router-outlet style="display: none;"></router-outlet>
     </div>
   </div>
+  <app-media-controller></app-media-controller>
 </div>
