--- a/src/app/shared/modules/actions/actions.component/actions.component.scss
+++ b/src/app/shared/modules/actions/actions.component/actions.component.scss
@@ -16,10 +16,11 @@
     color: white;
     font-family: 'roboto', sans-serif;
     .app-image {
-      width: 260px;
+      width: 240px;
     }
     h1 {
       padding-bottom: 20px;
+      font-size: 30px;
     }
   }
 }
