--- a/src/app/explore/genere-music/genere-music.component.scss
+++ b/src/app/explore/genere-music/genere-music.component.scss
@@ -1,5 +1,6 @@
 .container {
   padding: 80px 60px 0 60px;
+  margin-bottom: 90px;
   h1 {
     font-family: 'roboto', sans-serif;
     font-size: 45px;
