--- a/src/app/explore/generes/generes.component.scss
+++ b/src/app/explore/generes/generes.component.scss
@@ -4,6 +4,6 @@ ul {
   grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
   column-gap: 20px;
   row-gap: 16px;
-  margin: 0;
+  margin: 0 0 90px 0;
   padding: 120px 60px 40px 60px;
 }
