completed basic login functionality
completed basic login page and call to api
created an global form validator to add server errors to form
changed api url. autentication now lives at /users/authentication
api now sends 422 error when it receives invalid credentials

--- a/frontend/src/app/authentication/authentication.component/authentication.component.html
+++ b/frontend/src/app/authentication/authentication.component/authentication.component.html
@@ -1,1 +1,9 @@
-<p>authentication works!</p>
+<div class="container">
+  <div class="logo">
+    <i class="material-icons">music_note</i>
+    <h1>webPlayer</h1>
+  </div>
+  <div class="router-outlet">
+    <router-outlet style="display: none;"></router-outlet>
+  </div>
+</div>
