added basic signup feature
the user can now register but are not automatically logged in or redirected
global form eror handler now handles both 400 and 422
added button click animation for login and signup buttons

--- a/frontend/src/app/authentication/login/login.component.html
+++ b/frontend/src/app/authentication/login/login.component.html
@@ -23,7 +23,12 @@
       {{ error.value }}
     </li>
   </ul>
-  <button type="submit">
+  <button
+    [@clickTrigger]="mousedown ? 'mousedown' : '*'"
+    type="submit"
+    (mousedown)="mouseEvent($event)"
+    (mouseup)="mouseEvent($event)"
+  >
     Login
   </button>
 </form>
