--- a/frontend/src/app/authentication/authentication.component/authentication.component.scss
+++ b/frontend/src/app/authentication/authentication.component/authentication.component.scss
@@ -1,3 +1,5 @@
+@import '~src/scss/theme-data';
+
 .container {
   height: 100vh;
   width: 100vw;
@@ -10,10 +12,7 @@
     display: none;
   }
   .logo {
-    display: flex;
-    flex-flow: row;
-    align-items: center;
-    justify-content: center;
+    @include flex-center(row);
     font-family: 'roboto', sans-serif;
     color: white;
     margin: auto auto 10px auto;
