added button to route b/w login and signup

--- a/frontend/src/app/authentication/authentication.component/authentication.component.html
+++ b/frontend/src/app/authentication/authentication.component/authentication.component.html
@@ -3,7 +3,7 @@
     <i class="material-icons">music_note</i>
     <h1>webPlayer</h1>
   </div>
-  <div class="router-outlet">
-    <router-outlet style="display: none;"></router-outlet>
+  <div class="router-outlet" [@routeAnimation]="prepareOutlet(outlet)">
+    <router-outlet #outlet="outlet" style="display: none;"></router-outlet>
   </div>
 </div>
