--- a/frontend/src/app/authentication/login/login.component.html
+++ b/frontend/src/app/authentication/login/login.component.html
@@ -34,4 +34,5 @@
     </button>
   </form>
   <auth-navigation (click)="signup()"></auth-navigation>
+  <app-loading-indicator *ngIf="loading"></app-loading-indicator>
 </div>
