--- a/frontend/src/app/authentication/login/login.component.scss
+++ b/frontend/src/app/authentication/login/login.component.scss
@@ -54,11 +54,17 @@
       background-color: $primary-color;
       outline: none;
       box-sizing: border-box;
+      margin-bottom: 20px;
     }
   }
   auth-navigation {
     position: absolute;
     right: -100px;
     top: 20%;
+  }
+  app-loading-indicator {
+    position: absolute;
+    top: calc(100%+40px);
+    width: 100%;
   }
 }
