--- a/frontend/src/app/authentication/signup/signup.component.html
+++ b/frontend/src/app/authentication/signup/signup.component.html
@@ -75,4 +75,5 @@
     </button>
   </form>
   <auth-navigation (click)="login()"></auth-navigation>
+  <app-loading-indicator *ngIf="loading"></app-loading-indicator>
 </div>
