improved loading indicator

--- a/frontend/src/app/authentication/login/login.component.html
+++ b/frontend/src/app/authentication/login/login.component.html
@@ -34,5 +34,5 @@
     </button>
   </form>
   <auth-navigation (click)="signup()"></auth-navigation>
-  <app-loading-indicator *ngIf="loading"></app-loading-indicator>
+  <app-loading-indicator *ngIf="!loading"></app-loading-indicator>
 </div>
