login and signup buttons are now disabled while authentication is processed

--- a/frontend/src/app/authentication/signup/signup.component.html
+++ b/frontend/src/app/authentication/signup/signup.component.html
@@ -68,8 +68,10 @@
     <button
       [@clickTrigger]="mousedown ? 'mousedown' : '*'"
       type="submit"
+      [disabled]="loading"
       (mousedown)="mouseEvent($event)"
       (mouseup)="mouseEvent($event)"
+      [disabled]="loading"
     >
       Signup
     </button>
