--- a/frontend/src/app/authentication/login/login.component.html
+++ b/frontend/src/app/authentication/login/login.component.html
@@ -29,10 +29,11 @@
       type="submit"
       (mousedown)="mouseEvent($event)"
       (mouseup)="mouseEvent($event)"
+      [disabled]="loading"
     >
       Login
     </button>
   </form>
   <auth-navigation (click)="signup()"></auth-navigation>
-  <app-loading-indicator *ngIf="!loading"></app-loading-indicator>
+  <app-loading-indicator *ngIf="loading"></app-loading-indicator>
 </div>
