newly created playlist are now shown in the playlist list.
if the cover of a playlist is not present then music note icon is shown instead

test data server has been decoupled from playlist creation

library playlist has its own interface

--- a/frontend/src/app/stream/shared/playlist-detail/banner/banner.component.html
+++ b/frontend/src/app/stream/shared/playlist-detail/banner/banner.component.html
@@ -3,8 +3,8 @@
 <app-image [url]="details.cover"></app-image>
 <!-- </div> -->
 <div class="details">
-  <h1 class="title">{{ details.title }}</h1>
-  <p class="creater"><span>By</span> {{ details.created_by }}</p>
+  <h1 class="title">{{ details.name }}</h1>
+  <p class="creater"><span>By</span> {{ details.owner }}</p>
   <div class="artists">
     <p *ngFor="let artist of details.artists; last as isLast">
       {{ artist.name }}
