--- a/frontend/src/scss/theme-data.scss
+++ b/frontend/src/scss/theme-data.scss
@@ -1,5 +1,8 @@
 $primary-color: #95e1d3;
 $error-color: #ec5454;
+$card-color: rgb(25, 25, 25);
+$secondary-text-color: rgb(143, 143, 143);
+$primary-text-color: white;
 
 @mixin form-control {
   box-shadow: 0 0 2px 2px #4bebd6d0;
