--- a/frontend/src/app/stream/shared/modules/card/card.component/card.component.html
+++ b/frontend/src/app/stream/shared/modules/card/card.component/card.component.html
@@ -5,7 +5,7 @@
 >
   <app-image [url]="playlist.cover"></app-image>
   <div class="card-detail">
-    <h1>{{ playlist.title }}</h1>
+    <h1>{{ playlist.name }}</h1>
     <p *ngIf="playlist.artists">
       <span *ngFor="let artist of playlist.artists; last as isLast"
         >{{ artist.name }}<span *ngIf="!isLast">,</span></span
@@ -19,7 +19,7 @@
   [routerLink]="['/artist', artist.id]"
   class="card artist"
 >
-  <app-image [circle]="true" [url]="artist.cover"></app-image>
+  <app-image [artist]="true" [url]="artist.cover"></app-image>
   <div class="artist card-detail">
     <h1>{{ artist.name }}</h1>
   </div>
