--- a/frontend/src/app/stream/shared/modules/card/card.component/card.component.scss
+++ b/frontend/src/app/stream/shared/modules/card/card.component/card.component.scss
@@ -1,3 +1,5 @@
+@import '~src/scss/theme-data';
+
 .card {
   text-decoration: none;
   display: flex;
@@ -38,7 +40,7 @@
       line-height: 17px;
       padding: 0;
       margin: 2px 0 2px 2px;
-      color: rgb(143, 143, 143);
+      color: $secondary-text-color;
       display: -webkit-box;
       -webkit-line-clamp: 2;
       -webkit-box-orient: vertical;
