--- a/frontend/src/app/stream/shared/modules/image/image.component/image.component.html
+++ b/frontend/src/app/stream/shared/modules/image/image.component/image.component.html
@@ -1,7 +1,11 @@
-<div class="image-container" [class.circle]="circle">
+<div class="image-container" [class.artist]="artist">
   <div
+    *ngIf="url"
     class="image"
-    [class.circle]="circle"
+    [class.circle]="artist"
     [ngStyle]="{ 'background-image': 'url(' + url + ')' }"
   ></div>
+  <div *ngIf="!url" class="image" [class.circle]="artist">
+    <i class="material-icons">music_note</i>
+  </div>
 </div>
